<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AR Flow Meter</string>
    <string name="app_description">AR application for flow meters</string>
    
    <string name="button_start">Start</string>
    <string name="button_history">View History</string>
    <string name="button_continue">Continue</string>
    
    <string name="activities_list_title_string">AR Flow Meter</string>
    <string name="activities_list_empty">No activities</string>
    <string name="button_canc">Cancel</string>
	<string name="button_cont">Continue</string>
	
	<string name="hint_id">Patient ID</string>
	<string name="hint_name">Patient name</string>
	<string name="hint_height">Height</string>
	<string name="hint_age">Age</string>
	
	<string-array name="patient_gender">
		<item>Female</item>
		<item>Male</item>
	</string-array>
	
	<string name="text_id">Patient ID:</string>
	<string name="text_name">Patient name:</string>

    <string name="button_OK">OK</string>
    
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_TITLE">Authorization Error</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_TITLE">Network Unavailable</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_TITLE">Unsupported Version</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_TITLE">Clock Sync Error</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_TITLE">Request Timeout</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_TITLE">Poor Camera Image</string>
    <string name="UPDATE_ERROR_UNKNOWN_TITLE">Service Unavailable</string>
    <string name="UPDATE_ERROR_AUTHORIZATION_FAILED_DESC">The cloud recognition service access keys are incorrect or have expired.</string>
    <string name="UPDATE_ERROR_PROJECT_SUSPENDED_DESC">The cloud recognition service has been suspended.</string>
    <string name="UPDATE_ERROR_NO_NETWORK_CONNECTION_DESC">Please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_SERVICE_NOT_AVAILABLE_DESC">The service is unavailable, please try again later.</string>
    <string name="UPDATE_ERROR_UPDATE_SDK_DESC">The application is using an unsupported version of Vuforia.</string>
    <string name="UPDATE_ERROR_TIMESTAMP_OUT_OF_RANGE_DESC">Please update the date and time and try again.</string>
    <string name="UPDATE_ERROR_REQUEST_TIMEOUT_DESC">The network request has timed out, please check your internet connection and try again.</string>
    <string name="UPDATE_ERROR_BAD_FRAME_QUALITY_DESC">The camera does not have enough detail, please try again later.</string>
    <string name="UPDATE_ERROR_UNKNOWN_DESC">The service is unavaiable, please try again later.</string>

    <string name="content_desc_camera_button">Camera Button</string>
    <string name="overlay_build_target_help">Hold the device parallel to the target</string>
    <string name="target_quality_error_title">Low Quality Image</string>
    <string name="target_quality_error_desc">The image has very little detail, please try another.</string>
    
    <string name="menu_back">Vuforia Samples</string>
    <string name="menu_extended_tracking">Extended Tracking</string>
    <string name="menu_character_mode">Character Mode</string>
    <string name="menu_flash">Flash</string>
    <string name="menu_flash_error_on">Unable to turn on flash</string>
    <string name="menu_flash_error_off">Unable to turn off flash</string>
    <string name="menu_contAutofocus">Autofocus</string>
    <string name="menu_contAutofocus_error_on">Unable to activate Continuous Auto-Focus</string>
    <string name="menu_contAutofocus_error_off">Unable to deactivate Continuous Auto-Focus</string>
    <string name="menu_datasets">DATASETS</string>
    <string name="menu_camera">CAMERA</string>
    <string name="menu_camera_front">Front</string>
    <string name="menu_camera_back">Rear</string>
    <string name="menu_button_red">Red</string>
    <string name="menu_button_blue">Blue</string>
    <string name="menu_button_yellow">Yellow</string>
    <string name="menu_button_green">Green</string>
        
    <string name="splash_screen_description">Vuforia Splash</string>
    
    <string name="patient_name">Patient name</string>
    <string name="patient_id">Patient id</string>
    <string name="patient_info">Patient info</string>
    <string name="history">View History</string>
    <string name="begin">Begin</string>
    <string name="file_name"></string>
    <string name="date_time">Date</string>
    <string name="size">Size</string>
    <string name="raw_data"><b>Raw Data</b></string>
    <string name="results">Results</string>
    
</resources>
