<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >



    <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
                android:paddingBottom="@dimen/history_vertical_margin"
                android:paddingLeft="@dimen/history_horizontal_margin"
                android:paddingRight="@dimen/history_horizontal_margin"
                android:paddingTop="@dimen/history_vertical_margin"
            tools:context=".ViewHistory" >

        <TextView
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/file_name"
                android:textSize="20sp" />

        <TextView
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date_time"
                android:textSize="20sp" />

        <TextView
                android:layout_width="87dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/size"
                android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:paddingBottom="@dimen/history_vertical_margin"
            android:paddingLeft="@dimen/history_horizontal_margin"
            android:paddingRight="@dimen/history_horizontal_margin"
            android:paddingTop="@dimen/history_vertical_margin"
            tools:context=".ViewHistory" >

        <ListView
                android:id="@+id/saved_scan_list"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
        </ListView>
    </LinearLayout>

</LinearLayout>